# Elevator_Simulator

./: Building.cpp  BuildingView.qml  CMakeLists.txt  ControlsPane.qml  ElevatorCar.cpp  Metrics.h  PassengerGen.cpp  PassengerGen.h  README.md  Scheduler.cpp  main.cpp
.github/workflows/: release-windows.yml
qml/: Main.qml
src/core/: Building.h  ElevatorCar.h  Metrics.cpp  Scheduler.h  SimClock.cpp  SimClock.h
